--- a/index.html
+++ b/index.html
@@ -15,68 +15,8 @@
     <link rel="import" href="../core-toolbar/core-toolbar.html">
     <link rel="import" href="../core-ajax/core-ajax.html">
     <link rel="import" href="cg-app.html">
-    <style>
-        core-toolbar {
-            font-family: "Lato", sans-serif;
-            font-weight: 300;
-            background: rgb(243, 156, 18);
-        }
-        core-toolbar paper-button {
-            text-transform: none;
-            font-size: .7em;
-            color: #ccc;
-        }
-        core-toolbar paper-button.dark { background: #2b2b2b; }
-        core-toolbar paper-button.primary {
-            color: #222;
-            background: rgb(243, 156, 18);
-        }
-        core-toolbar paper-button span {
-            padding-left: 5px;
-        }
-        [drawer] {
-            font-family: "Lato", sans-serif;
-            font-weight: 300;
-            background: #222;
-            color: #aaa;
-        }
-        [drawer] core-item {
-            padding: 10px;
-            cursor: pointer !important;
-        }
-        [drawer] core-item:not(:last-child) {
-            border-bottom: 1px solid #444;
-        }
-        [drawer] core-item.core-selected {
-            color: #eee;
-            font-weight: normal;
-        }
-        /*core-toolbar {*/
-            /*font-family: "Varela", sans-serif;*/
-            /*background: rgb(207, 216, 220);*/
-            /*color: #222;*/
-            /*border-bottom: 1px solid #000;*/
-        /*}*/
-        /*core-toolbar #login {*/
-            /*font-size: .7em;*/
-        /*}*/
-        /*[drawer] {*/
-            /*font-family: "Varela Round", sans-serif;*/
-            /*background: #222;*/
-            /*color: #aaa;*/
-        /*}*/
-        /*[drawer] core-item {*/
-            /*padding: 10px;*/
-            /*cursor: pointer !important;*/
-        /*}*/
-        /*[drawer] core-item:not(:last-child) {*/
-            /*border-bottom: 1px solid #444;*/
-        /*}*/
-        /*[drawer] core-item.core-selected {*/
-            /*color: #eee;*/
-            /*font-weight: normal;*/
-        /*}*/
-    </style>
+    <link rel="stylesheet" href="themes/base.css" shim-shadowdom>
+    <link rel="stylesheet" href="themes/audigame/theme.css" shim-shadowdom>
 </head>
 <body fullbleed unresolved>
     <core-drawer-panel forceNarrow>
